--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>NEW YORK STATE CODING BAR</h1>
-    <h2>Victoria Gjelaj</h2>
-    <p><b>Nickname:</b> Best Gjels</p>
-    <p><b>Github:</b> Link</p>
-    <p><b>Coding Motto:</b> If need help, Cooper</p>
-    <p><b>Coding Levek:</b> Best</p>
-    <p><b>Hobbies:</b> Reading, Writing. Sleeping</p>
-    <p><b>Fav Movie:</b> Dead Poets Society</p>
-    <p><b>Fav Hockey Team:</b> NY Rangers</p>
-    <p><b>Fav Song:</b> Vienna/Maine</p>
+    <div class "Box3">
+        <h1>NEW YORK STATE CODING BAR</h1>
+    </div>
+    <div class "Box2"
+        <h2>VICTORIA GJELAJ</h2>
+    </div>
+    <div class "Box4">
+        <p><b>NICKNAME:</b> Best Gjels</p>
+        <p><b>GITHUB:</b> <a href="https://github.com/victoriag2797">Github Profile</a></p>
+        <p><b>CODING MOTTO:</b> If need help, Cooper</p>
+        <p><b>CODING LEVEL:</b> Best</p>
+        <p><b>HOBBIES:</b> Reading, Writing, Sleeping</p>
+        <p><b>FAV MOVIE:</b> <i>Dead Poets Society</i></p>
+        <p><b>FAV HOCKEY TEAM:</b> NY Rangers</p>
+        <p><b>FAV SONG:</b> Vienna/Maine</p>
+    </div>
+    <div class "Box5">
+        <h3><b>EXP. DATE:</b> Never</h3>
+        <p><b>NUMBER:</b> 19-88-10215</p>
+    </div>
 </body>
 </html>
