--- a/index.html
+++ b/index.html
@@ -8,21 +8,29 @@
 </head>
 <body>
     <div class="Parent-container">
-        <div class="Box1"><h1>NEW YORK STATE CODING BAR</h1></div>
-        <div class="Box2"></div><h2>VICTORIA GJELAJ</h2></div>
-        <div class="Box3">
-            <p><b>NICKNAME:</b> Best Gjels</p>
-            <p><b>GITHUB:</b> <a href="https://github.com/victoriag2797">Github Profile</a></p>
-            <p><b>CODING MOTTO:</b> If need help, Cooper</p>
-            <p><b>CODING LEVEL:</b> Best</p>
-            <p><b>HOBBIES:</b> Reading, Writing, Sleeping</p>
-            <p><b>FAV MOVIE:</b> <i>Dead Poets Society</i></p>
-            <p><b>FAV HOCKEY TEAM:</b> NY Rangers</p>
-            <p><b>FAV SONG:</b> Vienna/Maine</p>
+        <div class="card">
+            <div class="Box1"><h1>NEW YORK STATE CODING BAR</h1></div>
         </div>
-        <div class="Box4">
-            <h3><b>EXP. DATE:</b> Never</h3>
-            <p><b>NUMBER:</b> 19-88-10215</p>
+        <div class="card">
+            <div class="Box2"></div><h2>VICTORIA GJELAJ</h2></div>
+        </div>
+        <div class="card">
+            <div class="Box3">
+                <p><b>NICKNAME:</b> Best Gjels</p>
+                <p><b>GITHUB:</b> <a href="https://github.com/victoriag2797">Github Profile</a></p>
+                <p><b>CODING MOTTO:</b> If need help, Cooper</p>
+                <p><b>CODING LEVEL:</b> Best</p>
+                <p><b>HOBBIES:</b> Reading, Writing, Sleeping</p>
+                <p><b>FAV MOVIE:</b> <i>Dead Poets Society</i></p>
+                <p><b>FAV HOCKEY TEAM:</b> NY Rangers</p>
+                <p><b>FAV SONG:</b> Vienna/Maine</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="Box4">
+                <h3><b>EXP. DATE:</b> Never</h3>
+                <p><b>NUMBER:</b> 19-88-10215</p>
+            </div>
         </div>
     </div>
 </body>
