--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="Parent-container">
-        <div class="card">
+        <div class="card1">
             <div class="Box1"><h1>NEW YORK STATE CODING BAR</h1></div>
         </div>
-        <div class="card">
+        <div class="card2">
             <div class="Box2"></div><h2>VICTORIA GJELAJ</h2></div>
         </div>
-        <div class="card">
+        <div class="card3">
             <div class="Box3">
                 <p><b>NICKNAME:</b> Best Gjels</p>
                 <p><b>GITHUB:</b> <a href="https://github.com/victoriag2797">Github Profile</a></p>
@@ -26,9 +26,9 @@
                 <p><b>FAV SONG:</b> Vienna/Maine</p>
             </div>
         </div>
-        <div class="card">
+        <div class="card4">
             <div class="Box4">
-                <h3><b>EXP. DATE:</b> Never</h3>
+                <p><b>EXP. DATE:</b> Never</p>
                 <p><b>NUMBER:</b> 19-88-10215</p>
             </div>
         </div>
