--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
         </div>
         <div class="card3">
             <div class="Box3">
-                <p><b>NICKNAME:</b> Best Gjels</p>
-                <p><b>GITHUB:</b> <a href="https://github.com/victoriag2797">Github Profile</a></p>
-                <p><b>CODING MOTTO:</b> If need help, Cooper</p>
-                <p><b>CODING LEVEL:</b> Best</p>
-                <p><b>HOBBIES:</b> Reading, Writing, Sleeping</p>
-                <p><b>FAV MOVIE:</b> <i>Dead Poets Society</i></p>
-                <p><b>FAV HOCKEY TEAM:</b> NY Rangers</p>
-                <p><b>FAV SONG:</b> Vienna/Maine</p>
+                <p><b>NICKNAME:</b> Best Gjels
+                <br><b>GITHUB:</b> <a href="https://github.com/victoriag2797">Github Profile</a>
+                <br><b>CODING MOTTO:</b> If need help, Cooper
+                <br><b>CODING LEVEL:</b> Best
+                <br><b>HOBBIES:</b> Reading, Writing, Sleeping
+                <br><b>FAV MOVIE:</b> <i>Dead Poets Society</i>
+                <br><b>FAV HOCKEY TEAM:</b> NY Rangers
+                <br><b>FAV SONG:</b> Vienna/Maine</p>
             </div>
         </div>
         <div class="card4">
-            <div class="Box4">
-                <p><b>EXP. DATE:</b> Never</p>
-                <p><b>NUMBER:</b> 19-88-10215</p>
+            <div class="image">
+                <img src="https://m.media-amazon.com/images/I/617-2I06oGL._AC_UF1000,1000_QL80_.jpg" alt="Dead Poets Society Poster">
             </div>
         </div>
     </div>
