second to last commit hopefully

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="Parent-container">
-        <div class="card1">
-            <div class="Box1"><h1>NEW YORK STATE CODING BAR</h1></div>
-        </div>
-        <div class="card2">
-            <div class="Box2"></div><h2>VICTORIA GJELAJ</h2></div>
-        </div>
+            <div class="card1">
+                <div class="Box1">
+                    <h1>NEW YORK STATE CODING BAR</h1>
+                </div>
+            </div>
+            <div class="card2">
+                <div class="Box2"></div><h2>VICTORIA GJELAJ</h2></div>
+            </div>
+    <div class="image-text">
         <div class="card3">
             <div class="Box3">
                 <p><b>NICKNAME:</b> Best Gjels
@@ -25,12 +28,11 @@
                 <br><b>FAV HOCKEY TEAM:</b> NY Rangers
                 <br><b>FAV SONG:</b> Vienna/Maine</p>
             </div>
-        </div>
-        <div class="card4">
-            <div class="image">
+            <div class="image"></div>
                 <img src="https://m.media-amazon.com/images/I/617-2I06oGL._AC_UF1000,1000_QL80_.jpg" alt="Dead Poets Society Poster">
             </div>
         </div>
     </div>
+</div> 
 </body>
 </html>
